Update plist file

--- a/info.plist
+++ b/info.plist
@@ -9,6 +9,11 @@
 		<string>D9C00C5D-AA81-40DD-B21B-B6868B049A97</string>
 		<string>9A7FC8A5-35AB-452B-8033-034105EE0E4A</string>
 		<string>BD3F9A14-3C07-4C20-8E33-7D804ACA6C1D</string>
+		<string>93E5F4E6-6BE5-42B4-8BB9-4D0E95BF11D3</string>
+		<string>86DD3602-0590-432D-9362-925F6AB2F844</string>
+		<string>A252D566-10ED-405E-BC1A-8AE730EFBEF3</string>
+		<string>EDCAEE11-4DD3-4F36-A89A-0B6B5E79DE99</string>
+		<string>453F0C25-8B9E-42E1-A531-1A095C0F4497</string>
 	</array>
 	<key>uuid</key>
 	<string>CBBABBB4-0AA9-4AF7-BABD-3C53AE92E27E</string>
