Add navbar snippets

--- a/info.plist
+++ b/info.plist
@@ -7,6 +7,8 @@
 	<key>ordering</key>
 	<array>
 		<string>D9C00C5D-AA81-40DD-B21B-B6868B049A97</string>
+		<string>56199083-E9E6-4403-A507-29C62DD81C5F</string>
+		<string>58351CD9-4D8A-49D6-BDBE-3D4A031EBB11</string>
 		<string>9A7FC8A5-35AB-452B-8033-034105EE0E4A</string>
 		<string>BD3F9A14-3C07-4C20-8E33-7D804ACA6C1D</string>
 		<string>93E5F4E6-6BE5-42B4-8BB9-4D0E95BF11D3</string>
